--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<ap-photo></ap-photo>
+<ap-photo url="https://picsum.photos/id/237/200/300" description="Cachorro"></ap-photo>
+<ap-photo url="https://picsum.photos/seed/picsum/200/300" description="Montanha de Gelo"></ap-photo>
