Utilizando a primeira diretiva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<ap-photo url="https://picsum.photos/id/237/200/300" description="Cachorro"></ap-photo>
-<ap-photo url="https://picsum.photos/seed/picsum/200/300" description="Montanha de Gelo"></ap-photo>
+<!-- Utilizando a diretiva *ngFor. A mesma pode mudar a estrutura do componente. No caso, criará o componente ap-photo várias vezes de acordo com o tamanho do array -->
+<ap-photo 
+    [url]="photo.url" 
+    [description]="photo.description" 
+    *ngFor="let photo of photos">
+</ap-photo>
