--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -6,8 +6,8 @@
             type="search"
             placeholder="search..."
             autofocus
-            (keyup)="filter = $event.target.value"
-            >
+            (keyup)="debounce.next($event.target.value)" 
+            ><!-- utilizando o método next do subject para emitir um valor a cada tecla digitada no input -->
     </form>
 </div>
 
