Aplicando if else na diretiva *ngIf
Foi criado um componente load-button responsável por carregar novas fotos conforme uma nova página é solicitada para a API. Foi também criado uma espécie de if else neste componente.

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -12,3 +12,9 @@
 </div>
 
 <ap-photos [photos]="photos | filterByDescription: filter"></ap-photos>
+
+<!-- Componente que representa o botão load more -->
+<ap-load-button 
+    [hasMore]="hasMore"
+    (click)="loadMore()">
+</ap-load-button>
