Adicionando a dependência do Font Awesome
Foi adicionado ao projeto a dependência do Font Awesome.

--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,6 +1,7 @@
 <!-- Estamos realizando o binding de eventos onde o evento utilizado é o keyup e o mesmo está atribuindo ao atributo filter do componente o valor do campo input -->
 <div class="text-center mt-3 mb-3">
     <form>
+        <i aria-hidden="true" class="fa fa-search m-1"></i>
         <input 
             class="rounded"
             type="search"
