--- a/src/app/photos/photo-list/photos/photos.component.html
+++ b/src/app/photos/photo-list/photos/photos.component.html
@@ -8,7 +8,7 @@
     <li *ngFor="let cols of rows" class="row no-gutters">
         <div *ngFor="let photo of cols" class="col-4" >
             <!-- o contéudo passado dentro do ap-card será renderizado dentro da diretiva ng-content do template do CardComponent-->
-            <ap-card [title]="photo.description">
+            <ap-card>
                 <ap-photo 
                     [url]="photo.url" 
                     [description]="photo.description">
