--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card border-light text-center">
-    <h4 class="card-header">{{ title }}</h4>
+    <h4 class="card-header" [hidden]="title != '' ? 'false' : 'true'">{{ title }}</h4>
     <div class="card-block text-justify">
         <ng-content></ng-content> <!-- Tudo que estiver dentro de ap-card será renderizado aqui dentro -->       
     </div>
