--- a/src/app/home/sigin/signin.component.html
+++ b/src/app/home/sigin/signin.component.html
@@ -8,6 +8,7 @@
     <div class="form-group">
         <!-- A diretiva formControlName espera uma string que é o nome do campo definido no método group do formBuilder -->
         <input
+            #userNameTemplate
             formControlName="userName" 
             class="form-control"
             placeholder="user name"
