--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
+<ap-header></ap-header>
+
 <!--Diretiva que tem como objetivo renderizar o componente da rota dentro do template -->
 <router-outlet></router-outlet>
