--- a/src/app/home/sigin/signin.component.html
+++ b/src/app/home/sigin/signin.component.html
@@ -38,4 +38,4 @@
     <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
 
-<p>Not a user?<a>Register now</a></p>
+<p>Not a user?<a [routerLink]="['signup']">Register now</a></p>
