--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 
 <!--Diretiva que tem como objetivo renderizar o componente da rota dentro do template -->
 <router-outlet></router-outlet>
+
+<ap-footer></ap-footer>
