--- a/PROJETO-ALURAPIC/src/app/photos/photo/photo.component.html
+++ b/PROJETO-ALURAPIC/src/app/photos/photo/photo.component.html
@@ -1,1 +1,1 @@
-<img [src]="url" [alt]="description" class="img-thumbnail">
+<img [src]="url" [alt]="description" class="img-thumbnail col-12 col-md-12 col-lg-12 col-sm-12">
