--- a/PROJETO-ALURAPIC/src/app/photos/photo-form/photo-form.component.html
+++ b/PROJETO-ALURAPIC/src/app/photos/photo-form/photo-form.component.html
@@ -1,20 +1,31 @@
 <div class="container">
     <form [formGroup]="photoForm" class="row" (submit)="upload()">
-
       <div class="col-md-6 text-center">
-        <input 
-            formControlName="file" 
-            type="file" 
-            accept="image/*"
-            (change)="file = $event.target.files[0]"
-        >
-        <ap-vmessage 
-            texto="Please, select a photo"
-            *ngIf="photoForm.get('file').errors?.required"
+        <div class="form-group" *ngIf="!preview; else previewImage">
+            <button immediateClick type="button" (click)="fileInput.click()" class="btn btn-primary">
+              <i class="fa fa-image fa-4x align-middle"></i>
+            </button>        
+            <input
+                hidden
+                #fileInput 
+                formControlName="file" 
+                type="file" 
+                accept="image/*"
+                (change)="handleFile($event.target.files[0])"
             >
-        </ap-vmessage>
-      </div>
-  
+            <ap-vmessage 
+                texto="Please, select a photo"
+                *ngIf="photoForm.get('file').errors?.required"
+                >
+            </ap-vmessage>
+          </div>
+          <ng-template #previewImage>
+            <div class="text-center">
+              <ap-photo [url]="preview" title="Preview"></ap-photo>
+            </div>
+          </ng-template>          
+        </div>
+
       <div class="col-md-6">
         <div class="form-group">
             <textarea
