--- a/PROJETO-ALURAPIC/src/app/photos/photo-list/photos/photos.component.html
+++ b/PROJETO-ALURAPIC/src/app/photos/photo-list/photos/photos.component.html
@@ -11,17 +11,19 @@
             que a propriedade brightness é uma input-property da diretiva apDarkenOnHover 
         -->
         <div *ngFor="let photo of cols" class="col-4" apDarkenOnHover brightness="70%">
-            <!-- o contéudo passado dentro do ap-card será renderizado dentro da diretiva ng-content do template do CardComponent-->
-            <ap-card>
-                <ap-photo 
-                    [url]="photo.url" 
-                    [description]="photo.description">
-                </ap-photo>
-                <div class="text-center p-1">
-                    <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{ photo.likes }}</i>
-                    <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{ photo.comments }}</i>
-                </div>
-            </ap-card>
+            <a [routerLink]="['/p', photo.id]">
+                <!-- o contéudo passado dentro do ap-card será renderizado dentro da diretiva ng-content do template do CardComponent-->
+                <ap-card>
+                    <ap-photo 
+                        [url]="photo.url" 
+                        [description]="photo.description">
+                    </ap-photo>
+                    <div class="text-center p-1">
+                        <i aria-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{ photo.likes }}</i>
+                        <i aria-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{ photo.comments }}</i>
+                    </div>
+                </ap-card>
+            </a>
         </div>
     </li>
 </ol>
